--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "nodb-project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
+  "main": "server/index.js",
   "dependencies": {
+    "axios": "^0.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "reset-css": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
